fix(ffe-system-message): Ensure close button icon doesn't get cropped on Safari
This version fixes issue with the close button icon being cropped on Safari.

--- a/packages/ffe-system-message/less/ffe-system-message.less
+++ b/packages/ffe-system-message/less/ffe-system-message.less
@@ -107,14 +107,14 @@
         color: inherit;
         cursor: pointer;
         display: inline-block;
-        height: 14px;
+        height: 16px;
         margin: 0;
         padding: 0;
         position: absolute;
         right: 20px;
         top: 15px;
         vertical-align: middle;
-        width: 14px;
+        width: 16px;
 
         > svg {
             fill: @ffe-black;
